@@ -30,6 +30,8 @@ import fu.osms.common.utils.SecurityUtils;
 import fu.osms.inventory.dto.response.StockSummaryDTO;
 import fu.osms.inventory.service.InventoryService;
 import fu.osms.order.repository.OrderItemRepository;
+import fu.osms.sync.dto.SyncResult;
+import fu.osms.sync.service.ProductSyncOrchestratorService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
@@ -39,6 +41,8 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockedStatic;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
@@ -47,13 +51,13 @@ import org.springframework.data.jpa.domain.Specification;
 import java.math.BigDecimal;
 import java.time.OffsetDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.LENIENT)
 @DisplayName("ProductServiceImpl Tests")
 class ProductServiceImplTest {
 
@@ -83,15 +87,17 @@ class ProductServiceImplTest {
     private OrderItemRepository orderItemRepository;
     @Mock
     private ProductLogRepository productLogRepository;
+    @Mock
+    private ProductSyncOrchestratorService productSyncOrchestratorService;
 
     @InjectMocks
     private ProductServiceImpl productService;
 
-    // Test data
     private UUID productId;
     private UUID categoryId;
     private UUID userId;
     private UUID variantId;
+    private UUID channelId;
     private Category category;
     private User user;
     private Product product;
@@ -100,6 +106,8 @@ class ProductServiceImplTest {
     private ProductVariantRequest variantRequest;
     private ProductResponse response;
     private ProductVariantResponse variantResponse;
+    private Channel channel;
+    private ChannelProduct channelProduct;
 
     @BeforeEach
     void setUp() {
@@ -107,6 +115,7 @@ class ProductServiceImplTest {
         categoryId = UUID.randomUUID();
         userId = UUID.randomUUID();
         variantId = UUID.randomUUID();
+        channelId = UUID.randomUUID();
 
         category = Category.builder()
                 .id(categoryId)
@@ -181,7 +190,23 @@ class ProductServiceImplTest {
                 .lowStockThreshold(5)
                 .variants(List.of(variantResponse))
                 .channels(List.of())
+                .channelIds(List.of())
                 .channelSyncs(List.of())
+                .build();
+
+        channel = Channel.builder()
+                .id(channelId)
+                .platform(fu.osms.common.enums.PlatformType.SHOPIFY)
+                .displayName("Shopify Store")
+                .status("CONNECTED")
+                .metadata(new HashMap<>())
+                .build();
+
+        channelProduct = ChannelProduct.builder()
+                .id(UUID.randomUUID())
+                .channel(channel)
+                .product(product)
+                .mappingState("ACTIVE")
                 .build();
     }
 
@@ -191,9 +216,29 @@ class ProductServiceImplTest {
         return mocked;
     }
 
-    // =========================================================
-    // CREATE TESTS
-    // =========================================================
+    private void setupCommonGetByIdMocks() {
+        when(productRepository.findById(productId)).thenReturn(Optional.of(product));
+        when(productMapper.toResponse(product)).thenReturn(response);
+        when(orderItemRepository.existsByVariant_Product_Id(productId)).thenReturn(false);
+        when(productImageRepository.findByProductIdOrderByIsPrimaryDescSortOrderAsc(productId)).thenReturn(Collections.emptyList());
+        when(productVariantRepository.findByProductIdAndDeletedAtIsNull(productId)).thenReturn(List.of(variant));
+        when(inventoryService.getStockSummary(anyList())).thenReturn(Map.of(variantId, new StockSummaryDTO(50, 50, 0)));
+        when(channelService.getProductChannels(anyList())).thenReturn(Map.of());
+        when(channelService.getProductChannelIds(anyList())).thenReturn(Map.of());
+        when(channelService.getProductChannelSyncs(anyList())).thenReturn(Map.of());
+        when(productVariantMapper.toResponse(variant)).thenReturn(variantResponse);
+    }
+
+    private void setupCommonSearchMocks() {
+        when(productVariantRepository.findByProductIdInAndDeletedAtIsNull(anyList())).thenReturn(List.of(variant));
+        when(productImageRepository.findByProductIdInOrderByIsPrimaryDescSortOrderAsc(anyList())).thenReturn(Collections.emptyList());
+        when(inventoryService.getStockSummary(anyList())).thenReturn(Map.of(variantId, new StockSummaryDTO(50, 50, 0)));
+        when(channelService.getProductChannels(anyList())).thenReturn(Map.of());
+        when(channelService.getProductChannelIds(anyList())).thenReturn(Map.of());
+        when(channelService.getProductChannelSyncs(anyList())).thenReturn(Map.of());
+        when(productVariantMapper.toResponse(variant)).thenReturn(variantResponse);
+    }
+
     @Nested
     @DisplayName("create() Tests")
     class CreateTests {
@@ -202,7 +247,6 @@ class ProductServiceImplTest {
         @DisplayName("Should create product successfully with variants")
         void shouldCreateProductSuccessfully() {
             try (MockedStatic<SecurityUtils> mocked = mockSecurityUtils()) {
-                // Arrange
                 when(productRepository.existsBySkuAndDeletedAtIsNull("TEST-001")).thenReturn(false);
                 when(productMapper.toEntity(request)).thenReturn(product);
                 when(categoryRepository.findById(categoryId)).thenReturn(Optional.of(category));
@@ -212,20 +256,11 @@ class ProductServiceImplTest {
                 when(productVariantMapper.toEntity(variantRequest)).thenReturn(variant);
                 when(productVariantRepository.saveAll(anyList())).thenReturn(List.of(variant));
 
-                when(productRepository.findById(productId)).thenReturn(Optional.of(product));
-                when(productMapper.toResponse(product)).thenReturn(response);
-//                when(productImageRepository.findByProductIdOrderBySortOrderAsc(productId)).thenReturn(Collections.emptyList());
-//                when(productVariantRepository.findByProductIdAndDeletedAtIsNull(productId)).thenReturn(List.of(variant));
-                when(inventoryService.getStockSummary(anyList())).thenReturn(Map.of(variantId, new StockSummaryDTO(50, 50, 0)));
-                when(channelService.getProductChannels(anyList())).thenReturn(Map.of());
-                when(channelService.getProductChannelSyncs(anyList())).thenReturn(Map.of());
-                when(productVariantMapper.toResponse(variant)).thenReturn(variantResponse);
+                setupCommonGetByIdMocks();
                 when(productLogRepository.save(any())).thenReturn(null);
 
-                // Act
                 ProductResponse result = productService.create(request);
 
-                // Assert
                 assertThat(result).isNotNull();
                 assertThat(result.getName()).isEqualTo("Test Product");
                 assertThat(result.getSku()).isEqualTo("TEST-001");
@@ -240,6 +275,26 @@ class ProductServiceImplTest {
         }
 
         @Test
+        @DisplayName("Should create product without variants")
+        void shouldCreateProductWithoutVariants() {
+            try (MockedStatic<SecurityUtils> mocked = mockSecurityUtils()) {
+                request.setVariants(null);
+                when(productRepository.existsBySkuAndDeletedAtIsNull("TEST-001")).thenReturn(false);
+                when(productMapper.toEntity(request)).thenReturn(product);
+                when(categoryRepository.findById(categoryId)).thenReturn(Optional.of(category));
+                when(productRepository.save(any(Product.class))).thenReturn(product);
+                setupCommonGetByIdMocks();
+                when(productVariantRepository.findByProductIdAndDeletedAtIsNull(productId)).thenReturn(Collections.emptyList());
+                when(productLogRepository.save(any())).thenReturn(null);
+
+                ProductResponse result = productService.create(request);
+
+                assertThat(result).isNotNull();
+                verify(productVariantRepository, never()).saveAll(anyList());
+            }
+        }
+
+        @Test
         @DisplayName("Should throw PRODUCT_SKU_CONFLICT when SKU already exists")
         void shouldThrowWhenSkuExists() {
             try (MockedStatic<SecurityUtils> mocked = mockSecurityUtils()) {
@@ -247,10 +302,8 @@ class ProductServiceImplTest {
 
                 assertThatThrownBy(() -> productService.create(request))
                         .isInstanceOf(AppException.class)
-                        .satisfies(e -> {
-                            AppException appEx = (AppException) e;
-                            assertThat(appEx.getErrorCode()).isEqualTo(ErrorCode.PRODUCT_SKU_CONFLICT);
-                        });
+                        .satisfies(e -> assertThat(((AppException) e).getErrorCode())
+                                .isEqualTo(ErrorCode.PRODUCT_SKU_CONFLICT));
 
                 verify(productRepository).existsBySkuAndDeletedAtIsNull("TEST-001");
                 verify(productRepository, never()).save(any());
@@ -267,17 +320,15 @@ class ProductServiceImplTest {
 
                 assertThatThrownBy(() -> productService.create(request))
                         .isInstanceOf(AppException.class)
-                        .satisfies(e -> {
-                            AppException appEx = (AppException) e;
-                            assertThat(appEx.getErrorCode()).isEqualTo(ErrorCode.CATEGORY_NOT_FOUND);
-                        });
+                        .satisfies(e -> assertThat(((AppException) e).getErrorCode())
+                                .isEqualTo(ErrorCode.CATEGORY_NOT_FOUND));
 
                 verify(productRepository, never()).save(any());
             }
         }
 
         @Test
-        @DisplayName("Should throw VARIANT_SKU_CONFLICT when variant SKU conflicts with existing variant")
+        @DisplayName("Should throw VARIANT_SKU_CONFLICT when variant SKU conflicts")
         void shouldThrowWhenVariantSkuConflict() {
             try (MockedStatic<SecurityUtils> mocked = mockSecurityUtils()) {
                 when(productRepository.existsBySkuAndDeletedAtIsNull("TEST-001")).thenReturn(false);
@@ -287,10 +338,8 @@ class ProductServiceImplTest {
 
                 assertThatThrownBy(() -> productService.create(request))
                         .isInstanceOf(AppException.class)
-                        .satisfies(e -> {
-                            AppException appEx = (AppException) e;
-                            assertThat(appEx.getErrorCode()).isEqualTo(ErrorCode.VARIANT_SKU_CONFLICT);
-                        });
+                        .satisfies(e -> assertThat(((AppException) e).getErrorCode())
+                                .isEqualTo(ErrorCode.VARIANT_SKU_CONFLICT));
 
                 verify(productRepository, never()).save(any());
             }
@@ -301,7 +350,7 @@ class ProductServiceImplTest {
         void shouldThrowWhenDuplicateVariantSkusInRequest() {
             try (MockedStatic<SecurityUtils> mocked = mockSecurityUtils()) {
                 ProductVariantRequest dupVariant = ProductVariantRequest.builder()
-                        .sku("TEST-001") // same as product SKU
+                        .sku("TEST-001")
                         .price(new BigDecimal("150000"))
                         .build();
                 request.setVariants(List.of(variantRequest, dupVariant));
@@ -310,22 +359,20 @@ class ProductServiceImplTest {
                 when(productMapper.toEntity(request)).thenReturn(product);
                 when(categoryRepository.findById(categoryId)).thenReturn(Optional.of(category));
                 when(productVariantRepository.existsBySkuInAndDeletedAtIsNull(anyCollection())).thenReturn(false);
-                when(productRepository.existsBySkuInAndDeletedAtIsNull(anyCollection())).thenReturn(true); // SKU conflicts with product
+                when(productRepository.existsBySkuInAndDeletedAtIsNull(anyCollection())).thenReturn(true);
 
                 assertThatThrownBy(() -> productService.create(request))
                         .isInstanceOf(AppException.class)
-                        .satisfies(e -> {
-                            AppException appEx = (AppException) e;
-                            assertThat(appEx.getErrorCode()).isEqualTo(ErrorCode.PRODUCT_SKU_CONFLICT);
-                        });
+                        .satisfies(e -> assertThat(((AppException) e).getErrorCode())
+                                .isEqualTo(ErrorCode.PRODUCT_SKU_CONFLICT));
             }
         }
 
         @Test
-        @DisplayName("Should create product with empty attributes when attributes is null")
-        void shouldCreateWithEmptyAttributesWhenNull() {
+        @DisplayName("Should create product with channel associations")
+        void shouldCreateProductWithChannels() {
             try (MockedStatic<SecurityUtils> mocked = mockSecurityUtils()) {
-                request.setAttributes(null);
+                request.setChannelIds(List.of(channelId));
 
                 when(productRepository.existsBySkuAndDeletedAtIsNull("TEST-001")).thenReturn(false);
                 when(productMapper.toEntity(request)).thenReturn(product);
@@ -335,27 +382,20 @@ class ProductServiceImplTest {
                 when(productRepository.save(any(Product.class))).thenReturn(product);
                 when(productVariantMapper.toEntity(variantRequest)).thenReturn(variant);
                 when(productVariantRepository.saveAll(anyList())).thenReturn(List.of(variant));
-                when(productRepository.findById(productId)).thenReturn(Optional.of(product));
-                when(productMapper.toResponse(product)).thenReturn(response);
-                when(productImageRepository.findByProductIdOrderBySortOrderAsc(productId)).thenReturn(Collections.emptyList());
-                when(productVariantRepository.findByProductIdAndDeletedAtIsNull(productId)).thenReturn(List.of(variant));
-                when(inventoryService.getStockSummary(anyList())).thenReturn(Map.of());
-                when(channelService.getProductChannels(anyList())).thenReturn(Map.of());
-                when(channelService.getProductChannelSyncs(anyList())).thenReturn(Map.of());
-                when(productVariantMapper.toResponse(variant)).thenReturn(variantResponse);
+                when(channelRepository.findAllById(List.of(channelId))).thenReturn(List.of(channel));
+                when(channelProductRepository.saveAll(anyList())).thenReturn(List.of(channelProduct));
+                setupCommonGetByIdMocks();
                 when(productLogRepository.save(any())).thenReturn(null);
 
                 ProductResponse result = productService.create(request);
 
                 assertThat(result).isNotNull();
-                verify(productRepository).save(any(Product.class));
+                verify(channelRepository).findAllById(List.of(channelId));
+                verify(channelProductRepository).saveAll(anyList());
             }
         }
     }
 
-    // =========================================================
-    // GET BY ID TESTS
-    // =========================================================
     @Nested
     @DisplayName("getById() Tests")
     class GetByIdTests {
@@ -363,16 +403,7 @@ class ProductServiceImplTest {
         @Test
         @DisplayName("Should get product by ID successfully")
         void shouldGetProductByIdSuccessfully() {
-            when(productRepository.findById(productId))
-                    .thenReturn(Optional.of(product));
-            when(productMapper.toResponse(product)).thenReturn(response);
-            when(orderItemRepository.existsByVariant_Product_Id(productId)).thenReturn(false);
-            when(productImageRepository.findByProductIdOrderBySortOrderAsc(productId)).thenReturn(Collections.emptyList());
-            when(productVariantRepository.findByProductIdAndDeletedAtIsNull(productId)).thenReturn(List.of(variant));
-            when(inventoryService.getStockSummary(anyList())).thenReturn(Map.of(variantId, new StockSummaryDTO(50, 50, 0)));
-            when(channelService.getProductChannels(anyList())).thenReturn(Map.of());
-            when(channelService.getProductChannelSyncs(anyList())).thenReturn(Map.of());
-            when(productVariantMapper.toResponse(variant)).thenReturn(variantResponse);
+            setupCommonGetByIdMocks();
 
             ProductResponse result = productService.getById(productId);
 
@@ -392,25 +423,20 @@ class ProductServiceImplTest {
 
             assertThatThrownBy(() -> productService.getById(productId))
                     .isInstanceOf(AppException.class)
-                    .satisfies(e -> {
-                        AppException appEx = (AppException) e;
-                        assertThat(appEx.getErrorCode()).isEqualTo(ErrorCode.PRODUCT_NOT_FOUND);
-                    });
+                    .satisfies(e -> assertThat(((AppException) e).getErrorCode())
+                            .isEqualTo(ErrorCode.PRODUCT_NOT_FOUND));
         }
 
         @Test
         @DisplayName("Should throw PRODUCT_NOT_FOUND when product is soft-deleted")
         void shouldThrowWhenProductIsDeleted() {
             product.setDeletedAt(OffsetDateTime.now());
-            when(productRepository.findById(productId))
-                    .thenReturn(Optional.of(product));
+            when(productRepository.findById(productId)).thenReturn(Optional.of(product));
 
             assertThatThrownBy(() -> productService.getById(productId))
                     .isInstanceOf(AppException.class)
-                    .satisfies(e -> {
-                        AppException appEx = (AppException) e;
-                        assertThat(appEx.getErrorCode()).isEqualTo(ErrorCode.PRODUCT_NOT_FOUND);
-                    });
+                    .satisfies(e -> assertThat(((AppException) e).getErrorCode())
+                            .isEqualTo(ErrorCode.PRODUCT_NOT_FOUND));
         }
 
         @Test
@@ -421,10 +447,11 @@ class ProductServiceImplTest {
             when(productRepository.findById(productId)).thenReturn(Optional.of(product));
             when(productMapper.toResponse(product)).thenReturn(response);
             when(orderItemRepository.existsByVariant_Product_Id(productId)).thenReturn(true);
-            when(productImageRepository.findByProductIdOrderBySortOrderAsc(productId)).thenReturn(Collections.emptyList());
+            when(productImageRepository.findByProductIdOrderByIsPrimaryDescSortOrderAsc(productId)).thenReturn(Collections.emptyList());
             when(productVariantRepository.findByProductIdAndDeletedAtIsNull(productId)).thenReturn(List.of(variant));
             when(inventoryService.getStockSummary(anyList())).thenReturn(Map.of());
             when(channelService.getProductChannels(anyList())).thenReturn(Map.of());
+            when(channelService.getProductChannelIds(anyList())).thenReturn(Map.of());
             when(channelService.getProductChannelSyncs(anyList())).thenReturn(Map.of());
             when(productVariantMapper.toResponse(variant)).thenReturn(variantResponse);
 
@@ -434,27 +461,29 @@ class ProductServiceImplTest {
         }
 
         @Test
-        @DisplayName("Should return empty channels when product has no channels")
-        void shouldReturnEmptyChannelsWhenNoChannels() {
+        @DisplayName("Should return channels info when product has channels")
+        void shouldReturnChannelsInfoWhenProductHasChannels() {
+            response.setChannels(List.of("Shopify"));
+            response.setChannelIds(List.of(channelId));
+
             when(productRepository.findById(productId)).thenReturn(Optional.of(product));
             when(productMapper.toResponse(product)).thenReturn(response);
             when(orderItemRepository.existsByVariant_Product_Id(productId)).thenReturn(false);
-            when(productImageRepository.findByProductIdOrderBySortOrderAsc(productId)).thenReturn(Collections.emptyList());
+            when(productImageRepository.findByProductIdOrderByIsPrimaryDescSortOrderAsc(productId)).thenReturn(Collections.emptyList());
             when(productVariantRepository.findByProductIdAndDeletedAtIsNull(productId)).thenReturn(List.of(variant));
-            when(inventoryService.getStockSummary(anyList())).thenReturn(Map.of());
-            when(channelService.getProductChannels(anyList())).thenReturn(Map.of());
-            when(channelService.getProductChannelSyncs(anyList())).thenReturn(Map.of());
+            when(inventoryService.getStockSummary(anyList())).thenReturn(Map.of(variantId, new StockSummaryDTO(50, 50, 0)));
+            when(channelService.getProductChannels(anyList())).thenReturn(Map.of(productId, List.of("Shopify")));
+            when(channelService.getProductChannelIds(anyList())).thenReturn(Map.of(productId, List.of(channelId)));
+            when(channelService.getProductChannelSyncs(anyList())).thenReturn(Map.of(productId, List.of()));
             when(productVariantMapper.toResponse(variant)).thenReturn(variantResponse);
 
             ProductResponse result = productService.getById(productId);
 
-            assertThat(result.getChannels()).isEmpty();
+            assertThat(result.getChannels()).contains("Shopify");
+            assertThat(result.getChannelIds()).contains(channelId);
         }
     }
 
-    // =========================================================
-    // SEARCH TESTS
-    // =========================================================
     @Nested
     @DisplayName("search() Tests")
     class SearchTests {
@@ -466,12 +495,7 @@ class ProductServiceImplTest {
 
             when(productRepository.findAll(any(Specification.class), any(PageRequest.class))).thenReturn(page);
             when(productMapper.toResponse(product)).thenReturn(response);
-            when(productVariantRepository.findByProductIdInAndDeletedAtIsNull(anyList())).thenReturn(List.of(variant));
-            when(productImageRepository.findByProductIdInOrderBySortOrderAsc(anyList())).thenReturn(Collections.emptyList());
-            when(inventoryService.getStockSummary(anyList())).thenReturn(Map.of());
-            when(channelService.getProductChannels(anyList())).thenReturn(Map.of());
-            when(channelService.getProductChannelSyncs(anyList())).thenReturn(Map.of());
-            when(productVariantMapper.toResponse(variant)).thenReturn(variantResponse);
+            setupCommonSearchMocks();
 
             PageResponse<ProductResponse> result = productService.search(null, null, null, 0, 6);
 
@@ -503,12 +527,7 @@ class ProductServiceImplTest {
 
             when(productRepository.findAll(any(Specification.class), any(PageRequest.class))).thenReturn(page);
             when(productMapper.toResponse(product)).thenReturn(response);
-            when(productVariantRepository.findByProductIdInAndDeletedAtIsNull(anyList())).thenReturn(List.of(variant));
-            when(productImageRepository.findByProductIdInOrderBySortOrderAsc(anyList())).thenReturn(Collections.emptyList());
-            when(inventoryService.getStockSummary(anyList())).thenReturn(Map.of());
-            when(channelService.getProductChannels(anyList())).thenReturn(Map.of());
-            when(channelService.getProductChannelSyncs(anyList())).thenReturn(Map.of());
-            when(productVariantMapper.toResponse(variant)).thenReturn(variantResponse);
+            setupCommonSearchMocks();
 
             PageResponse<ProductResponse> result = productService.search("Test", null, null, 0, 6);
 
@@ -523,23 +542,127 @@ class ProductServiceImplTest {
 
             when(productRepository.findAll(any(Specification.class), any(PageRequest.class))).thenReturn(page);
             when(productMapper.toResponse(product)).thenReturn(response);
-            when(productVariantRepository.findByProductIdInAndDeletedAtIsNull(anyList())).thenReturn(List.of(variant));
-            when(productImageRepository.findByProductIdInOrderBySortOrderAsc(anyList())).thenReturn(Collections.emptyList());
-            when(inventoryService.getStockSummary(anyList())).thenReturn(Map.of());
-            when(channelService.getProductChannels(anyList())).thenReturn(Map.of());
-            when(channelService.getProductChannelSyncs(anyList())).thenReturn(Map.of());
-            when(productVariantMapper.toResponse(variant)).thenReturn(variantResponse);
+            setupCommonSearchMocks();
 
             PageResponse<ProductResponse> result = productService.search(null, ProductStatus.ACTIVE, null, 0, 6);
 
             assertThat(result.getContent()).hasSize(1);
             assertThat(result.getContent().get(0).getStatus()).isEqualTo(ProductStatus.ACTIVE);
         }
+
+        @Test
+        @DisplayName("Should filter by platform correctly")
+        void shouldFilterByPlatform() {
+            Page<Product> page = new PageImpl<>(List.of(product), PageRequest.of(0, 6), 1);
+
+            when(productRepository.findAll(any(Specification.class), any(PageRequest.class))).thenReturn(page);
+            when(productMapper.toResponse(product)).thenReturn(response);
+            setupCommonSearchMocks();
+
+            PageResponse<ProductResponse> result = productService.search(null, null, fu.osms.common.enums.PlatformType.SHOPIFY, 0, 6);
+
+            assertThat(result.getContent()).hasSize(1);
+            verify(productRepository).findAll(any(Specification.class), any(PageRequest.class));
+        }
+
+        @Test
+        @DisplayName("Should handle pagination correctly")
+        void shouldHandlePaginationCorrectly() {
+            Product product2 = Product.builder()
+                    .id(UUID.randomUUID())
+                    .name("Product 2")
+                    .sku("TEST-002")
+                    .category(category)
+                    .status(ProductStatus.ACTIVE)
+                    .lowStockThreshold(5)
+                    .attributes(new HashMap<>())
+                    .createdBy(user)
+                    .build();
+            Page<Product> page = new PageImpl<>(List.of(product, product2), PageRequest.of(0, 2), 2);
+
+            when(productRepository.findAll(any(Specification.class), any(PageRequest.class))).thenReturn(page);
+            when(productMapper.toResponse(product)).thenReturn(response);
+            when(productMapper.toResponse(product2)).thenReturn(ProductResponse.builder()
+                    .id(product2.getId())
+                    .name("Product 2")
+                    .sku("TEST-002")
+                    .status(ProductStatus.ACTIVE)
+                    .build());
+            when(productVariantRepository.findByProductIdInAndDeletedAtIsNull(anyList())).thenReturn(Collections.emptyList());
+            when(productImageRepository.findByProductIdInOrderByIsPrimaryDescSortOrderAsc(anyList())).thenReturn(Collections.emptyList());
+            when(inventoryService.getStockSummary(anyList())).thenReturn(Map.of());
+            when(channelService.getProductChannels(anyList())).thenReturn(Map.of());
+            when(channelService.getProductChannelIds(anyList())).thenReturn(Map.of());
+            when(channelService.getProductChannelSyncs(anyList())).thenReturn(Map.of());
+
+            PageResponse<ProductResponse> result = productService.search(null, null, null, 0, 2);
+
+            assertThat(result.getContent()).hasSize(2);
+            assertThat(result.getTotalElements()).isEqualTo(2);
+            assertThat(result.getTotalPages()).isEqualTo(1);
+            assertThat(result.isFirst()).isTrue();
+            assertThat(result.isLast()).isTrue();
+        }
     }
 
-    // =========================================================
-    // DELETE TESTS
-    // =========================================================
+    @Nested
+    @DisplayName("update() Tests")
+    class UpdateTests {
+
+        @Test
+        @DisplayName("Should throw PRODUCT_NOT_FOUND when updating non-existent product")
+        void shouldThrowWhenUpdatingNonExistent() {
+            try (MockedStatic<SecurityUtils> mocked = mockSecurityUtils()) {
+                when(productRepository.findById(productId)).thenReturn(Optional.empty());
+
+                assertThatThrownBy(() -> productService.update(productId, request))
+                        .isInstanceOf(AppException.class)
+                        .satisfies(e -> assertThat(((AppException) e).getErrorCode())
+                                .isEqualTo(ErrorCode.PRODUCT_NOT_FOUND));
+            }
+        }
+
+        @Test
+        @DisplayName("Should throw CONCURRENT_UPDATE when version mismatch")
+        void shouldThrowWhenVersionMismatch() {
+            try (MockedStatic<SecurityUtils> mocked = mockSecurityUtils()) {
+                ProductRequest versionedRequest = ProductRequest.builder()
+                        .name("Test")
+                        .sku("TEST-001")
+                        .categoryId(categoryId)
+                        .version(999L)
+                        .build();
+
+                when(productRepository.findById(productId)).thenReturn(Optional.of(product));
+
+                assertThatThrownBy(() -> productService.update(productId, versionedRequest))
+                        .isInstanceOf(AppException.class)
+                        .satisfies(e -> assertThat(((AppException) e).getErrorCode())
+                                .isEqualTo(ErrorCode.CONCURRENT_UPDATE));
+            }
+        }
+
+        @Test
+        @DisplayName("Should throw PRODUCT_HAS_ORDERS when trying to change SKU of product with orders")
+        void shouldThrowWhenChangingSkuOfProductWithOrders() {
+            try (MockedStatic<SecurityUtils> mocked = mockSecurityUtils()) {
+                ProductRequest skuChangeRequest = ProductRequest.builder()
+                        .name("Test")
+                        .sku("NEW-SKU")
+                        .categoryId(categoryId)
+                        .build();
+
+                when(productRepository.findById(productId)).thenReturn(Optional.of(product));
+                when(orderItemRepository.existsByVariant_Product_Id(productId)).thenReturn(true);
+
+                assertThatThrownBy(() -> productService.update(productId, skuChangeRequest))
+                        .isInstanceOf(AppException.class)
+                        .satisfies(e -> assertThat(((AppException) e).getErrorCode())
+                                .isEqualTo(ErrorCode.PRODUCT_HAS_ORDERS));
+            }
+        }
+    }
+
     @Nested
     @DisplayName("delete() Tests")
     class DeleteTests {
@@ -569,10 +692,8 @@ class ProductServiceImplTest {
 
             assertThatThrownBy(() -> productService.delete(productId))
                     .isInstanceOf(AppException.class)
-                    .satisfies(e -> {
-                        AppException appEx = (AppException) e;
-                        assertThat(appEx.getErrorCode()).isEqualTo(ErrorCode.PRODUCT_NOT_FOUND);
-                    });
+                    .satisfies(e -> assertThat(((AppException) e).getErrorCode())
+                            .isEqualTo(ErrorCode.PRODUCT_NOT_FOUND));
 
             verify(productRepository, never()).save(any());
         }
@@ -592,9 +713,29 @@ class ProductServiceImplTest {
         }
     }
 
-    // =========================================================
-    // UPDATE STATUS TESTS (throws UnsupportedOperationException)
-    // =========================================================
+    @Nested
+    @DisplayName("syncProductToAllChannels() Tests")
+    class SyncTests {
+
+        @Test
+        @DisplayName("Should sync product to all channels successfully")
+        void shouldSyncProductSuccessfully() {
+            SyncResult syncResult = SyncResult.builder()
+                    .successCount(2)
+                    .failedCount(0)
+                    .totalChannels(2)
+                    .build();
+
+            when(productSyncOrchestratorService.syncProductToAllChannels(productId)).thenReturn(syncResult);
+
+            SyncResult result = productService.syncProductToAllChannels(productId);
+
+            assertThat(result).isNotNull();
+            assertThat(result.getSuccessCount()).isEqualTo(2);
+            verify(productSyncOrchestratorService).syncProductToAllChannels(productId);
+        }
+    }
+
     @Nested
     @DisplayName("updateStatus() Tests")
     class UpdateStatusTests {
